--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Freemon2">
         <activity
+            android:name="activity.JoinProfileActivity"
+            android:exported="true" />
+        <activity
+            android:name="activity.JoinPhoneNoActivity"
+            android:exported="true" />
+        <activity
+            android:name="activity.JoinAgreeActivity"
+            android:exported="true" />
+        <activity
+            android:name="activity.LoginActivity"
+            android:exported="true" />
+        <activity
             android:name="activity.PermissionActivity"
             android:exported="true" />
         <activity
@@ -28,7 +40,7 @@
         <activity
             android:name="activity.MainActivity"
             android:exported="true"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
